fix overflow buty

--- a/beauty/ua/src/styles/sections/_layout-helpers.sass
+++ b/beauty/ua/src/styles/sections/_layout-helpers.sass
@@ -328,6 +328,23 @@ p, .p-text, .paragraph-text
 	font-weight: bold
 
 // buttons - style *******
+form
+  .btn-callback
+    display: -webkit-box
+    display: flex
+    -webkit-box-pack: center
+    justify-content: center
+    width: 100%
+    max-width: 195px
+    height: 38px
+    text-decoration: none
+    border-radius: 100px
+    border: 1px solid #A09BCF
+    color: #fff
+    text-transform: uppercase
+    cursor: pointer
+    padding-right: 16px
+    padding-left: 15px
 .city-switcher
   padding-top: 46px !important
 .btn-callback, .btn-send
